--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,12 +1,47 @@
 ﻿# Frontend Environment Variables
 # Copy this file to .env.local and update the values
 
-# Backend API URL
+# =============================================================================
+# BACKEND API CONFIGURATION
+# =============================================================================
 NEXT_PUBLIC_API_URL=http://localhost:8000
 
-# App Configuration
+# =============================================================================
+# APP CONFIGURATION
+# =============================================================================
 NEXT_PUBLIC_APP_NAME=Computer Inventory System
 NEXT_PUBLIC_APP_VERSION=1.0.0
 
-# Development settings
+# =============================================================================
+# DEVELOPMENT SETTINGS
+# =============================================================================
 NODE_ENV=development
+
+# Enable/disable authentication (set to "false" for dev, "true" for production)
+NEXT_PUBLIC_AUTH_ENABLED=false
+
+# =============================================================================
+# AUTH0 CONFIGURATION (only needed when NEXT_PUBLIC_AUTH_ENABLED=true)
+# =============================================================================
+# Auth0 Configuration - Get these from your Auth0 Dashboard
+AUTH0_SECRET=your-secret-key-at-least-32-characters-long-replace-this
+AUTH0_BASE_URL=http://localhost:3000
+AUTH0_ISSUER_BASE_URL=https://your-domain.auth0.com
+AUTH0_CLIENT_ID=your-auth0-client-id
+AUTH0_CLIENT_SECRET=your-auth0-client-secret
+
+# Auth0 Advanced Configuration (optional)
+AUTH0_AUDIENCE=
+AUTH0_SCOPE=openid profile email
+
+# Session configuration
+AUTH0_SESSION_ABSOLUTE_DURATION=604800
+AUTH0_SESSION_ROLLING_DURATION=86400
+
+# =============================================================================
+# PRODUCTION ENVIRONMENT VARIABLES
+# =============================================================================
+# For production deployment, update these values:
+# NEXT_PUBLIC_AUTH_ENABLED=true
+# AUTH0_BASE_URL=https://your-production-domain.com
+# AUTH0_SECRET=generate-new-secret-for-production
