--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,12 @@
     "clean": "rm -rf .next out"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.8.0",
+    "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.2.0",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "next": "^14.2.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -44,7 +47,9 @@
     "typescript",
     "tailwindcss",
     "inventory",
-    "asset-management"
+    "asset-management",
+    "auth0",
+    "oidc"
   ],
   "author": "Your Name",
   "license": "MIT"
