1pass partial fix

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,3 +23,7 @@ ONEPASSWORD_ENABLED=false
 OP_CONNECT_HOST=
 OP_API_TOKEN=
 OP_VAULT_NAME=
+
+# Internal CA cert verification. Change for prod with
+# OP_SSL_CERT_FILE=/path/to/internal-ca.pem
+OP_SSL_VERIFY=false
