1pass fix 2; helper scripts own directory

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,3 +27,7 @@ OP_VAULT_NAME=
 # Internal CA cert verification. Change for prod with
 # OP_SSL_CERT_FILE=/path/to/internal-ca.pem
 OP_SSL_VERIFY=false
+
+# Optional
+OP_SECRET_TEMPLATE=asset-{asset_id}
+OP_CONNECTION_TIMEOUT=10
