--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,8 @@ venv/
 .venv/
 env/
 .env/
-backend/alembic/*
-!backend/alembic/
+#backend/alembic/*
+#!backend/alembic/
 
 # Python bytecode
 backend/__pycache__/
