frontend asset details editable; api authentincation in dev fixed

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -7,6 +7,13 @@
 NEXT_PUBLIC_API_URL=http://localhost:8000
 
 # =============================================================================
+# API AUTHENTICATION
+# =============================================================================
+# For development - use the plain API key generated from backend
+# Run: cd backend && python -m app.config
+NEXT_PUBLIC_API_KEY=your-plain-api-key-here
+
+# =============================================================================
 # APP CONFIGURATION
 # =============================================================================
 NEXT_PUBLIC_APP_NAME=Computer Inventory System
@@ -17,7 +24,7 @@ NEXT_PUBLIC_APP_VERSION=1.0.0
 # =============================================================================
 NODE_ENV=development
 
-# Enable/disable authentication (set to "false" for dev, "true" for production)
+# Enable/disable Auth0 authentication (set to "false" for dev with API keys)
 NEXT_PUBLIC_AUTH_ENABLED=false
 
 # =============================================================================
@@ -45,3 +52,4 @@ AUTH0_SESSION_ROLLING_DURATION=86400
 # NEXT_PUBLIC_AUTH_ENABLED=true
 # AUTH0_BASE_URL=https://your-production-domain.com
 # AUTH0_SECRET=generate-new-secret-for-production
+# Remove or secure API_KEY for production use
